# neetlogiq-app

./: .env.example  .env.production.template  .gitignore  .npmrc  .processing_progress.json  ADDRESS_FILTERING_FIX_SUMMARY.md  ADDRESS_MATCHING_ANALYSIS.md  ADMIN_CRUD_SYSTEM.md  ADMIN_STATUS_AND_ENHANCEMENTS.md  ADVANCED_ADDRESS_MATCHING_TECHNIQUES.md  ADVANCED_FEATURES_2025.md  ADVANCED_FEATURES_AUDIT_RECENT3.md  ADVANCED_FEATURES_ROADMAP.md  ADVANCED_FEATURES_USAGE_ANALYSIS.md  ADVANCED_MATCHING_STRATEGIES.md  ALL_7_PATHS_CASCADING_COMPLETE.md  ALL_ALGORITHMS_SUMMARY.md  ALL_MATCHING_PATHS.md  APPLY_SCHEMA_FIX.md  ARCHITECTURE.md  ARCHITECTURE1.md  AUTOMATION_GUIDE.md  AUTORAG_INTEGRATION_GUIDE.md  BACKEND_INTEGRATION_ASSESSMENT.md  BACKEND_SETUP.md  BATCH_LEARNING_INTEGRATION.md  BEST_IN_CLASS_ID_IMPLEMENTATION_COMPLETE.md  BEST_IN_CLASS_ID_SYSTEM_DESIGN.md  CASCADING_ENSEMBLE_MATCHER_COMPLETE_FLOW.md  CASCADING_HIERARCHICAL_ENSEMBLE_ARCHITECTURE.md  CASCADING_MATCHER_INTEGRATION_FIXED.md  CASCADING_MATCHER_INTEGRATION_GUIDE.md  CASCADING_SYSTEM_COMPLETE.md  CASCADING_VS_FULL_ENSEMBLE_COMPARISON.md  CHANGELOG.md  CLEAN_PROGRESS_BAR_UX.md  CLOUDFLARE_DEPLOYMENT_SETUP.md  CODEBASE_REVIEW_AND_ENHANCEMENTS.md  COMPLETE_FLOW_DIAGRAM.md  COMPLETE_MATCHING_IMPROVEMENT_ROADMAP.md  (+316 more)
.local-cloudflare/: d1.sqlite
autorag_data/: autorag_metadata.json  (+8 more)
docs/: PRD.md  (+22 more)
wasm-data-processor/: Cargo.toml
wasm-data-processor/src/: lib.rs
wasm-processor/: Cargo.toml
wasm-processor/src/: analytics.rs  compression.rs  data_processor.rs  lib.rs  memory_manager.rs  vector_search.rs
(+4961 files in other folders)
