[package]
name = "wasm-processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
# WebAssembly-compatible compression libraries
lz4_flex = "0.11"
# zstd = { version = "0.12", default-features = false, features = ["wasm"] } # Disabled for now due to native dependencies
rayon = "1.8"
simd-json = "0.13"
memchr = "2.6"
hashbrown = "0.14"
indexmap = "2.0"
thiserror = "1.0"
anyhow = "1.0"
num-traits = "0.2"
num-bigint = "0.4"

[dependencies.wasm-bindgen-futures]
version = "0.4"

[features]
default = ["console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true
